--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/vendor/symfony"]
 	path = lib/vendor/symfony
 	url = http://github.com/vjousse/symfony-1.4.git
+[submodule "plugins/nmDoctrineGuardStuffPlugin"]
+	path = plugins/nmDoctrineGuardStuffPlugin
+	url = git://github.com/nacmartin/nmDoctrineGuardStuffPlugin.git
