--- a/config/properties.ini
+++ b/config/properties.ini
@@ -2,3 +2,8 @@
   name=boetticher
   author=Your name here
   orm=Doctrine
+[production]
+  host=boetticher.goza.me
+  port=22
+  user=nacho
+  dir=/var/www/boetticher/
