--- a/apps/backend/config/routing.yml
+++ b/apps/backend/config/routing.yml
@@ -31,7 +31,16 @@ task_group:
 # default rules
 homepage:
   url:   /
-  param: { module: default, action: index }
+  param: { module: uow, action: index }
+
+sf_guard_signin:
+  url:   /login
+  param: { module: sfGuardAuth, action: signin }
+
+sf_guard_signout:
+  url:   /logout
+  param: { module: sfGuardAuth, action: signout }
+
 
 # generic rules
 # please, remove them by adding more specific rules
